# mipt-algorithms

./: .clang-format  .clang-tidy  .gitignore  README.md
practice/: README.md
practice/seminar-01-leetcode/: CMakeLists.txt
practice/seminar-01-leetcode/io/: out.txt
practice/seminar-01-leetcode/src/: main.cpp  solution.hpp
practice/seminar-02-leetcode/: .clang-format  .clang-tidy
practice/seminar-02-leetcode/io/: out.txt  tests.txt
practice/seminar-02-leetcode/src/: main.cpp  solution.hpp
practice/seminar-02-sorts/: CMakeLists.txt
practice/seminar-02-sorts/io/: out.txt
practice/seminar-02-sorts/src/: main.cpp  sort.hpp  sort_with_comparator.hpp  sort_with_lambda_comparator.hpp
practice/seminar-03-leetcode/io/: out.txt  tests.txt
practice/seminar-03-leetcode/src/: main.cpp  solution.hpp
practice/seminar-04-leetcode/src/: main.cpp  solution.hpp
practice/seminar-05-leetcode/src/: alternative_solution.hpp  main.cpp  solution.hpp
practice/seminar-06-heap/src/: binomial-heap.cpp  binomial-heap.hpp  main.cpp
practice/seminar-09-segment-tree/src/: main.cpp  segment-tree-rmq.cpp  segment-tree-rmq.hpp
practice/support-lib/: support.hpp
